regen contexts again

--- a/Tests/Fixtures/StencilContexts/Storyboards-iOS/all.plist
+++ b/Tests/Fixtures/StencilContexts/Storyboards-iOS/all.plist
@@ -4,9 +4,12 @@
 <dict>
 	<key>modules</key>
 	<array>
+		<string>AVKit</string>
 		<string>CustomSegue</string>
+		<string>GLKit</string>
 		<string>LocationPicker</string>
 		<string>SlackTextViewController</string>
+		<string>UIKit</string>
 	</array>
 	<key>platform</key>
 	<string>iOS</string>
@@ -21,6 +24,10 @@
 				<string>LocationPicker</string>
 				<key>identifier</key>
 				<string></string>
+				<key>module</key>
+				<string>LocationPicker</string>
+				<key>type</key>
+				<string>LocationPickerViewController</string>
 			</dict>
 			<key>name</key>
 			<string>AdditionalImport</string>
@@ -35,6 +42,10 @@
 					<string>SlackTextViewController</string>
 					<key>identifier</key>
 					<string>public</string>
+					<key>module</key>
+					<string>SlackTextViewController</string>
+					<key>type</key>
+					<string>SLKTextViewController</string>
 				</dict>
 			</array>
 			<key>segues</key>
@@ -46,6 +57,10 @@
 					<string>CustomSegue</string>
 					<key>identifier</key>
 					<string>private</string>
+					<key>module</key>
+					<string>CustomSegue</string>
+					<key>type</key>
+					<string>SlideDownSegue</string>
 				</dict>
 			</array>
 		</dict>
@@ -56,6 +71,10 @@
 				<string>NavigationController</string>
 				<key>identifier</key>
 				<string></string>
+				<key>module</key>
+				<string>UIKit</string>
+				<key>type</key>
+				<string>UINavigationController</string>
 			</dict>
 			<key>name</key>
 			<string>Anonymous</string>
@@ -78,6 +97,10 @@
 					<string>ViewController</string>
 					<key>identifier</key>
 					<string>Dependent</string>
+					<key>module</key>
+					<string>UIKit</string>
+					<key>type</key>
+					<string>UIViewController</string>
 				</dict>
 			</array>
 			<key>segues</key>
@@ -90,6 +113,10 @@
 				<string>ViewController</string>
 				<key>identifier</key>
 				<string></string>
+				<key>module</key>
+				<string>UIKit</string>
+				<key>type</key>
+				<string>UIViewController</string>
 			</dict>
 			<key>name</key>
 			<string>Message</string>
@@ -102,18 +129,30 @@
 					<string>ViewController</string>
 					<key>identifier</key>
 					<string>Composer</string>
+					<key>module</key>
+					<string>UIKit</string>
+					<key>type</key>
+					<string>UIViewController</string>
 				</dict>
 				<dict>
 					<key>baseType</key>
 					<string>TableViewController</string>
 					<key>identifier</key>
 					<string>MessagesList</string>
+					<key>module</key>
+					<string>UIKit</string>
+					<key>type</key>
+					<string>UITableViewController</string>
 				</dict>
 				<dict>
 					<key>baseType</key>
 					<string>NavigationController</string>
 					<key>identifier</key>
 					<string>NavCtrl</string>
+					<key>module</key>
+					<string>UIKit</string>
+					<key>type</key>
+					<string>UINavigationController</string>
 				</dict>
 				<dict>
 					<key>customClass</key>
@@ -122,6 +161,10 @@
 					<string></string>
 					<key>identifier</key>
 					<string>URLChooser</string>
+					<key>module</key>
+					<string></string>
+					<key>type</key>
+					<string>XXPickerViewController</string>
 				</dict>
 			</array>
 			<key>segues</key>
@@ -133,6 +176,10 @@
 					<string></string>
 					<key>identifier</key>
 					<string>CustomBack</string>
+					<key>module</key>
+					<string></string>
+					<key>type</key>
+					<string>CustomSegueClass2</string>
 				</dict>
 				<dict>
 					<key>customClass</key>
@@ -141,6 +188,10 @@
 					<string></string>
 					<key>identifier</key>
 					<string>Embed</string>
+					<key>module</key>
+					<string>UIKit</string>
+					<key>type</key>
+					<string>UIStoryboardSegue</string>
 				</dict>
 				<dict>
 					<key>customClass</key>
@@ -149,6 +200,10 @@
 					<string></string>
 					<key>identifier</key>
 					<string>NonCustom</string>
+					<key>module</key>
+					<string>UIKit</string>
+					<key>type</key>
+					<string>UIStoryboardSegue</string>
 				</dict>
 				<dict>
 					<key>customClass</key>
@@ -157,6 +212,10 @@
 					<string></string>
 					<key>identifier</key>
 					<string>Show-NavCtrl</string>
+					<key>module</key>
+					<string></string>
+					<key>type</key>
+					<string>CustomSegueClass</string>
 				</dict>
 			</array>
 		</dict>
@@ -172,12 +231,20 @@
 					<string>GlkViewController</string>
 					<key>identifier</key>
 					<string>item 1</string>
+					<key>module</key>
+					<string>GLKit</string>
+					<key>type</key>
+					<string>GLKViewController</string>
 				</dict>
 				<dict>
 					<key>baseType</key>
 					<string>AvPlayerViewController</string>
 					<key>identifier</key>
 					<string>item 2</string>
+					<key>module</key>
+					<string>AVKit</string>
+					<key>type</key>
+					<string>AVPlayerViewController</string>
 				</dict>
 			</array>
 			<key>segues</key>
@@ -195,6 +262,10 @@
 					<string>NavigationController</string>
 					<key>identifier</key>
 					<string>Navigation</string>
+					<key>module</key>
+					<string>UIKit</string>
+					<key>type</key>
+					<string>UINavigationController</string>
 				</dict>
 			</array>
 			<key>segues</key>
@@ -209,6 +280,10 @@
 				<string></string>
 				<key>identifier</key>
 				<string>CreateAccount</string>
+				<key>module</key>
+				<string></string>
+				<key>type</key>
+				<string>CreateAccViewController</string>
 			</dict>
 			<key>name</key>
 			<string>Wizard</string>
@@ -221,6 +296,10 @@
 					<string>ViewController</string>
 					<key>identifier</key>
 					<string>Accept-CGU</string>
+					<key>module</key>
+					<string>UIKit</string>
+					<key>type</key>
+					<string>UIViewController</string>
 				</dict>
 				<dict>
 					<key>customClass</key>
@@ -229,18 +308,30 @@
 					<string></string>
 					<key>identifier</key>
 					<string>CreateAccount</string>
+					<key>module</key>
+					<string></string>
+					<key>type</key>
+					<string>CreateAccViewController</string>
 				</dict>
 				<dict>
 					<key>baseType</key>
 					<string>TableViewController</string>
 					<key>identifier</key>
 					<string>Preferences</string>
+					<key>module</key>
+					<string>UIKit</string>
+					<key>type</key>
+					<string>UITableViewController</string>
 				</dict>
 				<dict>
 					<key>baseType</key>
 					<string>ViewController</string>
 					<key>identifier</key>
 					<string>Validate_Password</string>
+					<key>module</key>
+					<string>UIKit</string>
+					<key>type</key>
+					<string>UIViewController</string>
 				</dict>
 			</array>
 			<key>segues</key>
@@ -252,6 +343,10 @@
 					<string></string>
 					<key>identifier</key>
 					<string>ShowPassword</string>
+					<key>module</key>
+					<string>UIKit</string>
+					<key>type</key>
+					<string>UIStoryboardSegue</string>
 				</dict>
 			</array>
 		</dict>
