--- a/Tests/Fixtures/StencilContexts/Storyboards-macOS/all.plist
+++ b/Tests/Fixtures/StencilContexts/Storyboards-macOS/all.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>modules</key>
 	<array>
+		<string>AppKit</string>
 		<string>FadeSegue</string>
 		<string>PrefsWindowController</string>
 	</array>
@@ -25,6 +26,10 @@
 					<string>PrefsWindowController</string>
 					<key>identifier</key>
 					<string>private</string>
+					<key>module</key>
+					<string>PrefsWindowController</string>
+					<key>type</key>
+					<string>DBPrefsWindowController</string>
 				</dict>
 			</array>
 			<key>segues</key>
@@ -52,6 +57,10 @@
 					<string>ViewController</string>
 					<key>identifier</key>
 					<string>Dependent</string>
+					<key>module</key>
+					<string>AppKit</string>
+					<key>type</key>
+					<string>NSViewController</string>
 				</dict>
 			</array>
 			<key>segues</key>
@@ -69,18 +78,30 @@
 					<string>ViewController</string>
 					<key>identifier</key>
 					<string>MessageDetails</string>
+					<key>module</key>
+					<string>AppKit</string>
+					<key>type</key>
+					<string>NSViewController</string>
 				</dict>
 				<dict>
 					<key>baseType</key>
 					<string>ViewController</string>
 					<key>identifier</key>
 					<string>MessageList</string>
+					<key>module</key>
+					<string>AppKit</string>
+					<key>type</key>
+					<string>NSViewController</string>
 				</dict>
 				<dict>
 					<key>baseType</key>
 					<string>ViewController</string>
 					<key>identifier</key>
 					<string>MessageListFooter</string>
+					<key>module</key>
+					<string>AppKit</string>
+					<key>type</key>
+					<string>NSViewController</string>
 				</dict>
 				<dict>
 					<key>customClass</key>
@@ -89,18 +110,30 @@
 					<string></string>
 					<key>identifier</key>
 					<string>MessagesTab</string>
+					<key>module</key>
+					<string></string>
+					<key>type</key>
+					<string>CustomTabViewController</string>
 				</dict>
 				<dict>
 					<key>baseType</key>
 					<string>SplitViewController</string>
 					<key>identifier</key>
 					<string>SplitMessages</string>
+					<key>module</key>
+					<string>AppKit</string>
+					<key>type</key>
+					<string>NSSplitViewController</string>
 				</dict>
 				<dict>
 					<key>baseType</key>
 					<string>WindowController</string>
 					<key>identifier</key>
 					<string>WindowCtrl</string>
+					<key>module</key>
+					<string>AppKit</string>
+					<key>type</key>
+					<string>NSWindowController</string>
 				</dict>
 			</array>
 			<key>segues</key>
@@ -112,6 +145,10 @@
 					<string></string>
 					<key>identifier</key>
 					<string>Embed</string>
+					<key>module</key>
+					<string>AppKit</string>
+					<key>type</key>
+					<string>NSStoryboardSegue</string>
 				</dict>
 				<dict>
 					<key>customClass</key>
@@ -120,6 +157,10 @@
 					<string></string>
 					<key>identifier</key>
 					<string>Modal</string>
+					<key>module</key>
+					<string>AppKit</string>
+					<key>type</key>
+					<string>NSStoryboardSegue</string>
 				</dict>
 				<dict>
 					<key>customClass</key>
@@ -128,6 +169,10 @@
 					<string></string>
 					<key>identifier</key>
 					<string>Popover</string>
+					<key>module</key>
+					<string>AppKit</string>
+					<key>type</key>
+					<string>NSStoryboardSegue</string>
 				</dict>
 				<dict>
 					<key>customClass</key>
@@ -136,6 +181,10 @@
 					<string></string>
 					<key>identifier</key>
 					<string>Sheet</string>
+					<key>module</key>
+					<string>AppKit</string>
+					<key>type</key>
+					<string>NSStoryboardSegue</string>
 				</dict>
 				<dict>
 					<key>customClass</key>
@@ -144,6 +193,10 @@
 					<string></string>
 					<key>identifier</key>
 					<string>Show</string>
+					<key>module</key>
+					<string>AppKit</string>
+					<key>type</key>
+					<string>NSStoryboardSegue</string>
 				</dict>
 				<dict>
 					<key>customClass</key>
@@ -152,6 +205,10 @@
 					<string>FadeSegue</string>
 					<key>identifier</key>
 					<string>public</string>
+					<key>module</key>
+					<string>FadeSegue</string>
+					<key>type</key>
+					<string>FadeSegue</string>
 				</dict>
 			</array>
 		</dict>
@@ -167,12 +224,20 @@
 					<string>ControllerPlaceholder</string>
 					<key>identifier</key>
 					<string>Dependent</string>
+					<key>module</key>
+					<string>AppKit</string>
+					<key>type</key>
+					<string>NSControllerPlaceholder</string>
 				</dict>
 				<dict>
 					<key>baseType</key>
 					<string>WindowController</string>
 					<key>identifier</key>
 					<string>Window</string>
+					<key>module</key>
+					<string>AppKit</string>
+					<key>type</key>
+					<string>NSWindowController</string>
 				</dict>
 			</array>
 			<key>segues</key>
