Fix weird IB issue for macOS page controllers

--- a/Tests/Fixtures/StencilContexts/Storyboards-macOS/all.plist
+++ b/Tests/Fixtures/StencilContexts/Storyboards-macOS/all.plist
@@ -111,7 +111,7 @@
 					<key>module</key>
 					<string>AppKit</string>
 					<key>type</key>
-					<string>NSPagecontroller</string>
+					<string>NSPageController</string>
 				</dict>
 				<dict>
 					<key>baseType</key>
