--- a/Tests/Fixtures/StencilContexts/Yaml/mapping.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/mapping.yaml
@@ -1,3 +1,8 @@
-key1: value1
-key2:
-  nestedKey2: nestedValue2
+files:
+- documents:
+  - data:
+      key1: value1
+      key2:
+        nestedKey2: nestedValue2
+  name: mapping
+  path: mapping.yaml
