Generate metadata description of the parsed data

--- a/Tests/Fixtures/StencilContexts/Yaml/all.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/all.yaml
@@ -4,9 +4,17 @@ files:
     - Mark McGwire
     - Sammy Sosa
     - Ken Griffey
+    metadata:
+      element:
+        type: String
+      type: Array
   - data:
     - Chicago Cubs
     - St Louis Cardinals
+    metadata:
+      element:
+        type: String
+      type: Array
   name: documents
   path: documents.yaml
 - documents:
@@ -18,6 +26,20 @@ files:
         - 1
         - 2
         - 3
+    metadata:
+      properties:
+      - name: key1
+        type: String
+      - name: key2
+        type: String
+      - name: key3
+        properties:
+        - element:
+            type: String
+          name: nestedKey3
+          type: Array
+        type: Dictionary
+      type: Dictionary
   name: json
   path: json.json
 - documents:
@@ -25,15 +47,31 @@ files:
       key1: value1
       key2:
         nestedKey2: nestedValue2
+    metadata:
+      properties:
+      - name: key1
+        type: String
+      - name: key2
+        properties:
+        - name: nestedKey2
+          type: String
+        type: Dictionary
+      type: Dictionary
   name: mapping
   path: mapping.yaml
 - documents:
   - data: value1
+    metadata:
+      type: String
   name: scalar
   path: scalar.yaml
 - documents:
   - data:
     - value1
     - value2
+    metadata:
+      element:
+        type: String
+      type: Array
   name: sequence
   path: sequence.yaml
