--- a/Tests/Fixtures/StencilContexts/Plist/all.yaml
+++ b/Tests/Fixtures/StencilContexts/Plist/all.yaml
@@ -3,6 +3,10 @@ files:
   - data:
     - value1
     - value2
+    metadata:
+      element:
+        type: String
+      type: Array
   name: array
   path: array.plist
 - documents:
@@ -10,5 +14,15 @@ files:
       key1: value1
       key2:
         nestedKey2: nestedValue2
+    metadata:
+      properties:
+      - name: key1
+        type: String
+      - name: key2
+        properties:
+        - name: nestedKey2
+          type: String
+        type: Dictionary
+      type: Dictionary
   name: dictionary
   path: dictionary.plist
