--- a/Tests/Fixtures/StencilContexts/Plist/array.yaml
+++ b/Tests/Fixtures/StencilContexts/Plist/array.yaml
@@ -3,5 +3,9 @@ files:
   - data:
     - value1
     - value2
+    metadata:
+      element:
+        type: String
+      type: Array
   name: array
   path: array.plist
