--- a/Tests/Fixtures/StencilContexts/Yaml/documents.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/documents.yaml
@@ -4,8 +4,16 @@ files:
     - Mark McGwire
     - Sammy Sosa
     - Ken Griffey
+    metadata:
+      element:
+        type: String
+      type: Array
   - data:
     - Chicago Cubs
     - St Louis Cardinals
+    metadata:
+      element:
+        type: String
+      type: Array
   name: documents
   path: documents.yaml
